--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -104,8 +104,7 @@ header {
 }
 
 .checkout-wrapper {
-  // width: 100%;
-  // flex: 6;
+
   .checkout-title {
       font-size: 1.5rem;
       font-weight: 700;
@@ -190,6 +189,13 @@ header {
       &.name {
         width: 60%;
       }
+      &.end-time {
+        width: calc((100% - 1.5rem)/2);
+        margin-right: 1.5rem;
+      }
+      &.cvc-ccv {
+        width: calc((100% - 1.5rem)/2);
+      }
       label {
         margin-bottom: 8px;
       }
@@ -199,6 +205,7 @@ header {
     .form-row {
       width: 100%;
       height: 60px;
+      margin-bottom: 24px;
       border-radius: 4px;
       border: 1px solid var(--light-gray);
       align-items: center;
